fix: schedule btn styles left behind

--- a/web/src/app.css
+++ b/web/src/app.css
@@ -581,7 +581,6 @@ form button[type="submit"] {
 .schedule-btn {
     display: flex;
     padding: 5px;
-    color: var(--text);
     background-color: var(--raise-bg);
     border-radius: 2px;
     margin: 1em 2em;
@@ -591,6 +590,7 @@ form button[type="submit"] {
     align-items: center;
     text-align: center;
     text-decoration: none;
+    justify-content: center;
 }
 
 .schedule-btn::before {
